Replace active border with box-shadow due to spacing issues

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,5 +18,5 @@ body, #app {
 }
 
 .router-link-exact-active {
-    border: 1px solid darken($highlight-color, 30);
+    box-shadow: 0 0 2px 0 rgba(225,188,41,1);
 }
